customization in products section, previous commit was wrong spell, that will be tailwind css project

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Totato 500g</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -149,7 +149,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Potato 1KG</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -173,7 +173,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Potato 1KG</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -197,7 +197,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Totato 500g</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -209,7 +209,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Potato 1KG</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -221,7 +221,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Totato 500g</h5>
               <span>39.99$</span>
             </div>
           </div>
@@ -245,7 +245,7 @@
             />
             <div>
               <i class="fa-solid fa-star text-yellow-500"></i>
-              <h5>Onion 1KG</h5>
+              <h5>Potato 1KG</h5>
               <span>39.99$</span>
             </div>
           </div>
