--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Use TainWind CSS Project</title>
+    <!-- font awesome cdn -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -11,26 +12,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- tailwind css cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
     <!-- hearder section design -->
     <header class="bg-linear-to-t from-gray-200 to-white-900">
       <!-- nav design -->
-      <div class="flex justify-between max-w-7xl mx-auto pt-6 items-center">
+      <nav class="flex gap-5 justify-between max-w-[90%] sm:w-[80%] mx-auto pt-6 items-center">
         <div>
           <img src="assets/logo-green.png" alt="Brand Logo" />
         </div>
 
-        <div>
-          <ul class="flex justify-between gap-20">
+          <div class="hidden sm:block">
+          <ul class="flex gap-10">
             <li><a class="text-lg" href="#">Product</a></li>
             <li><a class="text-lg" href="#">Services</a></li>
             <li><a class="text-lg" href="#">Contact Us</a></li>
           </ul>
-        </div>
+          </div>
 
-        <div class="flex justify-between gap-10 items-center">
+          <div class="flex gap-5 items-center hidden">
           <i class="fa-solid fa-magnifying-glass"></i>
           <i class="fa-solid fa-cart-plus"></i>
 
@@ -45,11 +47,17 @@
           >
             Register
           </button>
+          </div>
+
+        <div class="font-bold text-4xl block sm:hidden">
+          <i class="fa-solid fa-bars"></i>
         </div>
-      </div>
+      </nav>
 
       <!-- banner design -->
-      <h1 class="text-6xl font-semibold text-center mt-20">
+      <div class="max-w-[90%] sm:w-[80%] mx-auto">
+
+        <h1 class="text-6xl font-semibold text-center mt-20">
         Freshness <span class="text-green-600">You Can</span> <br /><span
           class="text-green-600"
           >Count</span
@@ -63,60 +71,70 @@
         staples, we’ve got you covered every day!
       </p>
       <img
-        class="max-w-5xl mx-auto"
+        class="sm:max-w-7xl w-[100%] mx-auto"
         src="assets/hero-img.png"
         alt="banner photo"
       />
+
+      </div>
     </header>
 
     <main>
 
        <!-- service section design -->
-    <div class="max-w-7xl mx-auto">
-      <h3 class="text-4xl text-green-500 font-semibold mt-20 mb-8">Services</h3>
+    <div class="max-w-[90%] sm:w-[80%] mx-auto">
 
-      <div class="flex justify-between gap-6">
+      <h3 class="text-4xl text-center sm:text-start text-green-500 font-semibold mt-20 mb-8">Services</h3>
+
+      <div class="grid grid-cols-1 sm:grid-cols-3 justify-between gap-6">
+
         <div class="text-center bg-gray-300 pt-6 pb-6 rounded-lg">
           <img
             class="mx-auto"
             src="assets/support.png"
             alt="24/7 hours service"
           />
-          <h4>24/7 Services</h4>
+          <h4 class="font-semibold text-xl">24/7 Services</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt
           </p>
         </div>
+
         <div class="text-center bg-gray-300 pt-6 pb-6 rounded-lg">
           <img class="mx-auto" src="assets/fast-delivery.png" alt="" />
-          <h4>24/7 Services</h4>
+          <h4 class="font-semibold text-xl">Fast Delivery</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt
           </p>
         </div>
+
         <div class="text-center bg-gray-300 pt-6 pb-6 rounded-lg">
           <img class="mx-auto" src="assets/healthy-100.png" alt="" />
-          <h4>24/7 Services</h4>
+          <h4 class="font-semibold text-xl">Healthy Products</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt
           </p>
         </div>
+
       </div>
     </div>
 
     <!-- popular products section design -->
     <div class="bg-gray-300 pb-20">
-      <div class="max-w-7xl mx-auto">
+
+      <div class="w-[90%] sm:w-[80%] mx-auto">
+
         <div>
-          <h3 class="text-4xl text-green-500 font-semibold mt-20 pt-5 mb-10">
+          <h3 class="text-4xl text-center sm:text-start text-green-500 font-semibold mt-20 pt-5 mb-10">
             Popular Products
           </h3>
         </div>
 
-        <div class="grid gap-15 grid-cols-4">
+        <div class="grid gap-15 sm:grid-cols-4">
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -129,6 +147,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -141,6 +160,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -153,6 +173,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -165,6 +186,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -177,6 +199,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -189,6 +212,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -201,6 +225,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -213,6 +238,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -225,6 +251,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -237,6 +264,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -249,6 +277,7 @@
               <span>39.99$</span>
             </div>
           </div>
+
           <div class="flex bg-white p-4 gap-4 rounded-xl">
             <img
               class="bg-gray-300 rounded-xl"
@@ -261,17 +290,22 @@
               <span>39.99$</span>
             </div>
           </div>
+
         </div>
+
       </div>
+
     </div>
 
     <!-- offer section design -->
-    <div class="max-w-7xl mx-auto mb-20">
-      <h3 class="text-4xl text-green-500 font-semibold mt-20 mb-8">
+    <div class="w-[90%] sm:w-[80%] mx-auto mb-20">
+
+      <h3 class="text-4xl text-center sm:text-start text-green-500 font-semibold mt-20 mb-8">
         Arrival & Offers
       </h3>
 
-      <div class="flex justify-between gap-5">
+      <div class="flex justify-between flex-col sm:flex-row gap-5">
+
         <div class="flex bg-green-900 justify-between gap-5 rounded-xl items-center">
           <div class="ml-10 pt-10">
             <img class="mb-5" src="assets/dawat-logo.png" alt="" />
@@ -280,7 +314,7 @@
             >
               Cook Exotic Dishes</button
             ><br />
-            <span class="font-bold text-4xl text-white">UP to 20% OFF</span>
+            <span class="font-bold text-4xl text-white block mb-5">UP to 20% OFF</span>
           </div>
           <div><img src="assets/product-dawat.png" alt="" /></div>
         </div>
@@ -297,19 +331,21 @@
           </div>
           <div><img src="assets/product-indiagate.png" alt="" /></div>
         </div>
+
       </div>
+
     </div>
 
 <!-- golocery news section start -->
-     <div class="flex justify-between items-center max-w-7xl mx-auto rounded-xl bg-gray-300 gap-20 -mb-50 relative">
+     <div class="flex flex-col sm:flex-row justify-between items-center w-[90%] sm:w-[80%] mx-auto rounded-xl bg-gray-300 sm:gap-20 -mb-50 relative">
       <img class="mt-15 mb-15" src="assets/fruit-basket.png" alt="">
 
-      <div class="mr-20">
-      <h3 class="text-4xl text-green-500 font-semibold mt-20 mb-8">
+      <div class="sm:mr-20 text-center mb-10">
+      <h3 class="text-4xl text-green-500 font-semibold mt-20 mb-5">
       Get Golocery News</h3>
       <p>Exclusive training tips, ticks, product deals and more.</p>
-      <input class=" mt-5 block w-md pl-10 pt-5 pb-5 bg-white rounded-xl text-xl" type="email" placeholder="Enter Email">
-      <button class="px-7 py-3 bg-green-500 rounded-lg font-medium text-white text-xl mt-10">Subscribe</button>
+      <input class=" mt-5 block w-md pl-10 pt-5 pb-5 bg-white rounded-xl text-xl" type="email" placeholder="Enter email...">
+      <button class="px-7 py-3 bg-green-500 rounded-lg font-medium text-white text-xl mt-5 sm:mt-10">Subscribe</button>
 
       </div>
 
@@ -318,9 +354,9 @@
     </main>
 
     <!-- footer section start -->
-    <footer class="bg-green-600 h-150 pt-80">
+    <footer class="bg-green-600 h-150 pt-60 sm:pt-80">
 
-       <div class="max-w-7xl mx-auto flex justify-between items-center text-white">
+       <div class="w-[90%] sm:w-[80%] mx-auto flex flex-col sm:flex-row justify-between pl-5 sm:items-center text-white">
 
       <div>
         <img src="assets/logo-white.png" alt="">
@@ -328,14 +364,15 @@
       </div>
 
       <div>
-        <ul class="flex flex-col justify-between gap-4">
+        <ul class="flex flex-col justify-between sm:gap-4 mb-10">
             <li><a class="text-lg" href="#">Product</a></li>
             <li><a class="text-lg" href="#">Services</a></li>
             <li><a class="text-lg" href="#">Contact Us</a></li>
           </ul>
       </div>
 
-      <div class="-mb-15">
+      <div class="sm:-mb-15">
+
         <span>Follow Us</span>
         <div>
         <i class="fa-brands fa-facebook"></i>
@@ -343,6 +380,7 @@
         <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-youtube"></i>
         </div>
+
       </div>
 
      </div>
