fixed the nav section and add icons+login&register button

--- a/index.html
+++ b/index.html
@@ -19,40 +19,38 @@
     <!-- hearder section design -->
     <header class="bg-linear-to-t from-gray-200 to-white-900">
       <!-- nav design -->
-      <nav class="flex gap-5 justify-between max-w-[90%] sm:w-[80%] mx-auto pt-6 items-center">
-        <div>
-          <img src="assets/logo-green.png" alt="Brand Logo" />
-        </div>
+      <nav class="flex justify-between gap-5 w-[80%] mx-auto pt-6 items-center ">
 
-          <div class="hidden sm:block">
-          <ul class="flex gap-10">
-            <li><a class="text-lg" href="#">Product</a></li>
-            <li><a class="text-lg" href="#">Services</a></li>
-            <li><a class="text-lg" href="#">Contact Us</a></li>
-          </ul>
-          </div>
+      <div class="flex shrink-0">
+        <img src="assets/logo-green.png" alt="Brand Logo" />
+      </div>
 
-          <div class="flex gap-5 items-center hidden">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <i class="fa-solid fa-cart-plus"></i>
+      <div class=" hidden sm:block">
+        <ul class="flex justify-between sm:gap-10">
+          <li><a class="text-lg" href="#">Product</a></li>
+          <li><a class="text-lg" href="#">Services</a></li>
+          <li><a class="text-lg" href="#">Contact Us</a></li>
+        </ul>
+      </div>
 
-          <button
-            class="px-7 py-2 border-2 border-green-500 rounded-lg font-medium text-lg"
-          >
-            Login
-          </button>
+      <div class="hidden sm:block">
 
-          <button
-            class="px-7 py-3 bg-green-500 rounded-lg font-medium text-white text-xl"
-          >
-            Register
-          </button>
-          </div>
+        <div class="flex justify-between gap-5 sm:gap-10 items-center">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-cart-plus"></i>
 
-        <div class="font-bold text-4xl block sm:hidden">
-          <i class="fa-solid fa-bars"></i>
-        </div>
-      </nav>
+        <button class="px-7 py-2 border-2 border-green-500 rounded-lg font-medium text-lg">Login</button>
+
+        <button class="px-7 py-3 bg-green-500 rounded-lg font-medium text-white text-xl">Register</button>
+      </div>
+
+      </div>
+
+      <div class="font-bold text-4xl block sm:hidden">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+    </nav>
 
       <!-- banner design -->
       <div class="max-w-[90%] sm:w-[80%] mx-auto">
@@ -386,9 +384,6 @@
      </div>
 
     </footer>
-
-
-
 
   </body>
 </html>
